--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,4 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-
+.btn-hover {
+ @apply flex h-10 items-center rounded border border-yellow-400 bg-transparent px-3 text-sm font-semibold text-yellow-400 hover:border-black hover:bg-yellow-400 hover:text-black;
+}
